--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,1
 
 
 ###################
@@ -14,9 +14,8 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = ranger
-$menu = wofi --show drun
-$textEditor = nvim
+$fileManager = thunar
+$menu = fuzzel
 
 #################
 ### AUTOSTART ###
@@ -26,9 +25,10 @@ $textEditor = nvim
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec = nm-applet 
+exec = nm-applet
+exec = dunst
 exec-once = hyprpaper & waybar
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Arc-Dark"
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Catppuccin-Dark-Macchiato"
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 exec-once = ~/.config/waybar/runscript/change_bar_wayland.sh
 exec-once = ~/.config/wofi/runscript/change_menu_wayland.sh
@@ -36,7 +36,6 @@ exec-once = ~/.config/hypr/nvimlaunch.sh
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
-
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
@@ -145,9 +144,13 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+    accel_profile = flat
     touchpad {
         natural_scroll = false
+	disable_while_typing = false
+    }
+    touchdevice {
+	enabled = true
     }
 }
 
@@ -184,9 +187,10 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
-bind = $mainMod, D, exec, zen-browser
+bind = $mainMod, D, exec, zen
 bind = $mainMod, A, exec, linux-discord-rich-presence
 bind = $mainMod, N, exec, obsidian
+bind = $mainMod, SPACE, exec, hyprlock
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -251,3 +255,6 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+misc {
+    vrr = 1
+}
