--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,preferred,auto,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = thunar
-$menu = fuzzel
+$menu = wofi
 
 #################
 ### AUTOSTART ###
